--- a/demo1/templates/test3.html
+++ b/demo1/templates/test3.html
@@ -20,6 +20,11 @@
             男：<input type="radio" name="gender" value="1">
             女：<input type="radio" name="gender" value="2">
         </div>
+                <div>
+            性别：
+            男：<input type="radio" name="gender" value="1">
+            女：<input type="radio" name="gender" value="2">
+        </div>
         <div>
             角色：
             <select name="role">
