--- a/demo3/templates/home.html
+++ b/demo3/templates/home.html
@@ -3,18 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>CSS_Test1</title>
-    <link rel="stylesheet" href="static/home.css">
+<!--    <link rel="stylesheet" href="static/home.css">-->
+    <style>
+        .test1{
+            font-size: 100px;
+            color: yellow;
+            font-weight: 400;
+            font-style: italic;
+        }
+    </style>
+
 </head>
 
 <body>
-  <div>
-    <h1>中国联通</h1>
-    <h1>中国电信</h1>
-  </div>
+<!--  <div>-->
+<!--    <h1 class="id1 id2">中国联通</h1>-->
+<!--    <h1>中国电信</h1>-->
+<!--  </div>-->
 
-  <div class="id">
-    <h1>中国联通</h1>
-    <h1>中国电信</h1>
-  </div>
+<!--    <div style="height:100px; width:100px; background-color:pink;"></div>-->
+    <div style="width:40%; background-color:green;">Yang</div>
+
+    <div style="height:200px; width:200px; background-color:pink;">
+        <div style="height:50%; width:50%; background-color:black"></div>
+    </div>
+
+    <span style="height:200px; width:200px; background-color:pink; display:block"></span>
+    <div style="width:40%; background-color:green; display:inline">Yang</div>
+
+    <div style="display:inline-block">北京</div>
+    <div style="display:inline-block">上海</div>
+    <div style="display:inline-block">天津</div>
+
+    <div class="test1">YZQ</div>
+
 </body>
 </html>
